# allure_reporter

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
allure_reporter/: config.py  errors.py  main.py  repos.py  schema.py  utils.py
allure_reporter/api/: app.py  dependencies.py  http_error.py  routers.py
allure_reporter/templates/: mail.html
tests/: conftest.py  docker-compose.yml  pytest.env
tests/data/simple_results/: b4f36a2d-13b3-496f-a3da-9865f191b94a-result.json
tests/functional/: test_ok.py
