[tool.poetry]
name = "allure-reporter"
version = "0.0.1"
description = "Manage allure reports"
authors = ["Anton L <a.lavrov@corp.mail.ru>"]

[tool.poetry.dependencies]
python = "^3.6.1"
pydantic = {extras = ["typing_extensions", "dotenv"], version = "^1.5.1"}
fastapi = "^0.54.1"
uvicorn = "^0.11.5"
requests = "^2.23.0"
async_generator = "^1.10"
python-multipart = "^0.0.5"
aiofiles = "^0.5.0"
async-exit-stack = "^1.0.1"
jinja2 = "^2.11.2"
loguru = "^0.4.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.2.0"
black = "^19.10b0"
isort = "^4"
pytest_docker = "^0.7.2"
pytest = "^5.4.1"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
known_third_party = ["aiofiles", "async_generator", "fastapi", "jinja2", "loguru", "pydantic", "pytest", "requests", "starlette"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
